update for passing test

--- a/src/App.sass
+++ b/src/App.sass
@@ -12,3 +12,10 @@ body
   font-size: 1.6rem
   font-family: "Roboto", sans-serif
   padding: 2rem
+
+.show
+  display: inline-block
+
+.hide
+  display: none
+  visibility: hidden
