qa test third design update

--- a/src/App.sass
+++ b/src/App.sass
@@ -12,6 +12,7 @@ body
   font-size: 1.6rem
   font-family: "Roboto", sans-serif
   padding: 2rem
+  height: 100vh
 
 .show
   display: inline-block
@@ -19,3 +20,24 @@ body
 .hide
   display: none
   visibility: hidden
+
+.App
+  display: flex
+  flex-direction: column
+  justify-content: space-between
+  height: 95vh
+
+.footer
+  padding-top: 2rem
+  border-top: 2px solid #DE4848
+  display: flex
+  align-items: center
+  justify-content: center
+
+  &__logo
+    width: 45px
+
+  &__p
+    color: #DE4848
+    font-weight: bold
+    margin-left: 1rem
